2011-02-15 Bernard Baeyens (berbae)

	* 1.0-1 :
	First release of the udisksvm script
	with the associated default.xml configuration file for traydevice.
2011-03-28
	* 1.0-2 :
	Change the source origins to github repository
	Change architecture to "any"
2011-05-08
        * 1.1-0 :
	Change default mount options : flush instead of sync for vfat file
	system, and added nodev for all mount commands
2011-05-15
        * 1.2-0 :
	New traydevice configuration file name: udisksvm.xml
	traydevice now uses the -c option for the configuration file
	tooltip is now the Label name if available and Uuid if not
2011-10-22
        * 1.3-0 :
	Don't use 'eval' anymore to populate the variables
	from 'udisks--show-infos'