@@ -1,15 +1,15 @@
-# Maintainer: SpepS <dreamspepser at yahoo dot it>
+# Maintainer: falkTX <falktx@gmail.com>
 
 _p=klaudia
 pkgname=$_p-git
-pkgver=20110803
+pkgver=20111025
 pkgrel=1
-pkgdesc="A Linux Audio Applications Manager, writen in Python."
+pkgdesc="A multimedia application launcher with LADISH support (Git version)"
 arch=(any)
-url="http://sourceforge.net/projects/klaudia/"
-license=('GPL')
+url="http://kxstudio.sf.net/klaudia"
+license=('GPL2')
 depends=('python2-pyqt' 'dbus-python' 'pyxdg' 'xdg-utils')
-makedepends=('git')
+makedepends=('git' 'python2-pyqt')
 optdepends=('ladish: session support')
 provides=("$_p")
 conflicts=("$_p")
@@ -35,14 +35,6 @@ build() {
   rm -rf "$srcdir/$_gitname-build"
   git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
   cd "$srcdir/$_gitname-build"
-
-  #
-  # BUILD HERE
-  #
-
-  # python2 fixes
-  sed -i "s|\(env python\).*|\12|" `grep -rl "env python" .`
-  sed -i "s|\(python\)[^ ]*|\12|" $_p
 
   make
 }
