@@ -7,10 +7,10 @@
 pkgname=ladspa-amb-plugins
 _pkgname=AMB-plugins
 pkgver=0.8.1
-pkgrel=1
+pkgrel=2
 pkgdesc="LADSPA plugins of various improved decoders"
 arch=('i686' 'x86_64')
-url="http://kokkinizita.net/linuxaudio/ladspa/"
+url="http://kokkinizita.linuxaudio.org/"
 license=('GPL')
 provides=('amb-plugins' 'ladspa-amb')
 conflicts=('amb-plugins' 'ladspa-amb')
@@ -18,7 +18,7 @@ conflicts=('amb-plugins' 'ladspa-amb')
 groups=('ladspa-plugins')
 
 depends=('gcc-libs')
-source=(http://kokkinizita.net/linuxaudio/downloads/$_pkgname-$pkgver.tar.bz2)
+source=(http://kokkinizita.linuxaudio.org/linuxaudio/downloads/$_pkgname-$pkgver.tar.bz2)
 md5sums=('496d8d2bf6036611b6b4aa7f56325a52')
 
 
