@@ -7,7 +7,7 @@
 
 # Maintainer: Bernard Baeyens (berbae)
 pkgname=udisksvm
-pkgver=1.3
+pkgver=1.4
 pkgrel=0
 pkgdesc="GUI oriented automounting script for removable media"
 arch=("any")
@@ -22,14 +22,14 @@ source=("https://github.com/berbae/udisksvm/raw/master/README"
         "https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.sh")
 
 sha256sums=("fb5a36dfd6bf6332c6ce2394dd2b6d06ad379b99a81c8fc0457a086021abd88b"
-            "ad1191452ca1c0e0b8894d08c95bcc7ae08c72a76194503a265d4200f21b788a"
-            "930fc662b013609d819bb41f58728f4eac3c553c6b2261d89cc66ae1b34fc989")
+            "1c8020a0f03de043f1886844196daa6795539ba9b5bf9aea4a52c6c42feb5252"
+            "d91d9de9075fd848329b387a951e22e0e6d33853db2e84ce7e1a913db52c50e1")
 
 package() {
   cd $srcdir
   install -D -m 644 README ${pkgdir}/usr/share/udisksvm/README
-  install -D -m 644 $pkgname.xml ${pkgdir}/usr/share/udisksvm/$pkgname.xml
-  install -D -m 755 $pkgname-$pkgver.sh ${pkgdir}/usr/bin/udisksvm
+  install -D -m 666 $pkgname.xml ${pkgdir}/usr/share/udisksvm/$pkgname.xml
+  install -D $pkgname-$pkgver.sh ${pkgdir}/usr/bin/udisksvm
 }
 
 # vim:set ts=2 sw=2 et:
