@@ -20,3 +20,8 @@
         * 1.3-0 :
 	Don't use 'eval' anymore to populate the variables
 	from 'udisks--show-infos'
+2011-10-25
+        * 1.4-0 :
+	Missing '-c $TRAYCONF' in the pgrep test for optical disks
+	Using (exec traydevice ...) & to launch traydevice
+	Using 'udisks --eject' instead of '/usr/bin/eject' in udisksvm.xml
